objects/QIDC__IMS_Label_ims__c.object
<CustomObject>
    <description>The IMS Label object is used to store a unique identifier for a label to be used in a module. This will assist in translating the app to multiple languages for international implementation.</description>
    <fields>
        <fullName>QIDC__Category_ims__c</fullName>
        <description>Indicates where the text is being used.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates where the text is being used.</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Description_ims__c</fullName>
        <description>Description to give details of the text to be translated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description to give details of the text to be translated.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__ID_ims__c</fullName>
        <description>Unique number assigned to key-text pair which denotes the entry was made by IMS and therefore clients cannot change.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Unique number assigned to key-text pair which denotes the entry was made by IMS and therefore clients cannot change.</inlineHelpText>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__Integration_ID_ims__c</fullName>
        <description>External ID which is used for data loading only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>External ID which is used for data loading only.</inlineHelpText>
        <label>Integration ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Product_Version_ims__c</fullName>
        <description>IMS Product version in which this config data was created.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>IMS Product version in which this config data was created.</inlineHelpText>
        <label>Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Type_ims__c</fullName>
        <description>The type of text to be translated, such as Label, Picklist Value, Error Message, Validation Message, or Information.</description>
        <inlineHelpText>The type of text to be translated, such as Label, Picklist Value, Error Message, Validation Message, or Information.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Column Header</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Section Header</fullName>
                </value>
                <value>
                    <fullName>Setting</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Value_ims__c</fullName>
        <description>The actual text to be translated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The actual text to be translated.</inlineHelpText>
        <label>Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>IMS Label</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMS Labels</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>